# ejabberd2fuse

./: .gitignore  CMakeLists.txt  Makefile  README.md  ejabberd.c  ejabberd.h  ejabberd2fuse.c  ejabberd2fuse.h  ejabberd2fuse.sh  main.c  umount.sh
cmake/Modules/: FindEI.cmake  FindFUSE.cmake
